--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
             </div>
         </div>
 
-        <p class="footer"><a class="git-link" href="https://github.com/Ellino1s/Vanilla-JS-WeatherApp">Open-source
-                code</a>, by Elina Sotska</p>
+        <small>
+            <a class="git-link" href="https://github.com/Ellino1s/Simple-weather-app" target="_blank">
+                Open-source code</a>, by Elina Sotska</small>
     </div>
     <script src="src/app.js"></script>
 </body>
