Styled main elements of the app

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <div class="card-body text-dark">
                 <h1 class="card-title">Prague</h1>
-                <div class="row">
+                <div class="current-date row">
                     <div class="col-6">
                         <p>Friday, 23 April</p>
                     </div>
@@ -35,12 +35,12 @@
                 <p class="card-text">Description</p>
                 <strong>15</strong>
                 <span><a href="">℃</a>| <a href="">℉</a></span>
-                <div class="row">
+                <div class="weather-info row">
                     <div class="col">
-                        <p>Humidity:<span>30%</span></p>
+                        <p>Humidity: <span>30%</span></p>
                     </div>
                     <div class="col">
-                        <p>Wind speed:<span>10 km/h</span></p>
+                        <p>Wind speed: <span>10 km/h</span></p>
                     </div>
 
                 </div>
