Styled temperature section

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
                 </div>
                 <img src="" alt="Weather icon">
                 <p class="card-text">Description</p>
-                <strong>15</strong>
-                <span><a href="">℃</a>| <a href="">℉</a></span>
+                <strong class="temperature">15</strong><span class="units"><a href="">℃</a> | <a href="">℉</a></span>
                 <div class="weather-info row">
                     <div class="col">
                         <p>Humidity: <span>30%</span></p>
