Showing current temperature

--- a/index.html
+++ b/index.html
@@ -21,25 +21,26 @@
         <div class="card border-dark mb-3">
 
             <div class="card-body text-dark">
-                <h1 class="card-title">Prague</h1>
+                <h1 id="city" class="card-title"></h1>
                 <div class="current-date row">
                     <div class="col-6">
-                        <p>Friday, 23 April</p>
+                        <p id="date">Friday, 23 April</p>
                     </div>
                     <div class="col-6">
-                        <p>15:00</p>
+                        <p id="time">15:00</p>
 
                     </div>
                 </div>
                 <img src="" alt="Weather icon">
-                <p class="card-text">Description</p>
-                <strong class="temperature">15</strong><span class="units"><a href="">℃</a> | <a href="">℉</a></span>
+                <p id="description" class="card-text"></p>
+                <strong id="temperature" class="temperature"></strong><span class="units"><a href="">℃</a> | <a
+                        href="">℉</a></span>
                 <div class="weather-info row">
                     <div class="col">
-                        <p>Humidity: <span>30%</span></p>
+                        <p>Humidity: <span id="humidity"></span>%</p>
                     </div>
                     <div class="col">
-                        <p>Wind speed: <span>10 km/h</span></p>
+                        <p>Wind: <span id="wind"></span>km/h</p>
                     </div>
 
                 </div>
