Added relevant icon

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                     </div>
                 </div>
-                <img src="" alt="Weather icon">
+                <img src="" alt="Weather icon" id="icon">
                 <p id="description" class="card-text"></p>
                 <strong id="temperature" class="temperature"></strong><span class="units"><a href="">℃</a> | <a
                         href="">℉</a></span>
