--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Weather forecast</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="src/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous" />
@@ -21,6 +22,17 @@
         <div class="card border-dark mb-3">
 
             <div class="card-body text-dark">
+                <form id="search-form" class="mb-3">
+                    <div class="row">
+                        <div class="col-9">
+                            <input id="city-input" type="search" placeholder="Type a city name..."
+                                class="form-control border-dark" autocomplete="off" />
+                        </div>
+                        <div class="col-3">
+                            <button type="submit" class="btn btn-dark w-100"><i class="bi bi-search"></i></button>
+                        </div>
+                    </div>
+                </form>
                 <h1 id="city" class="card-title"></h1>
                 <div class="current-date row">
                     <div class="col-6">
