--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <div class="card border-dark mb-3">
 
             <div class="card-body text-dark">
-                <form id="search-form" class="mb-3">
+                <form id="search-form" class="mb-4">
                     <div class="row">
                         <div class="col-9">
                             <input id="city-input" type="search" placeholder="Type a city name..."
-                                class="form-control border-dark" autocomplete="off" />
+                                class="city-input form-control border-dark" autocomplete="off" />
                         </div>
                         <div class="col-3">
                             <button type="submit" class="btn btn-dark w-100"><i class="bi bi-search"></i></button>
