Implemented the unit conversion

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 </div>
                 <img src="" alt="Weather icon" id="icon">
                 <p id="description" class="card-text"></p>
-                <strong id="temperature" class="temperature"></strong><span class="units"><a href="">℃</a> | <a
-                        href="">℉</a></span>
+                <strong id="temperature" class="temperature"></strong><span class="units"><a href="#" id="celsius-link"
+                        class="active">℃</a> | <a href="#" id="fahrenheit-link">℉</a></span>
                 <div class="weather-info row">
                     <div class="col">
                         <p>Humidity: <span id="humidity"></span>%</p>
